--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,9 @@
+title: VeriOSS  
+description: VeriOSS is a research project for building a fair bug bounty platform
+show_downloads: false
+google_analytics:
 theme: jekyll-theme-minimal
+
+remote_theme: pages-themes/minimal@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
