--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: VeriOSS  
-description: VeriOSS is a research project for building a fair bug bounty platform
+description: VeriOSS is a blockchain-based bug bounty platform
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-minimal
